# kodeaffe

./: .gitignore  Cargo.toml  README.rst  app.js  conf.ini  kodeaffe_de.service  package.json  supervisor_kodeaffe.de
data/: interesting_links.js  portfolio.js
public/css/: portfolio.css  style.css
public/js/: IdenticaWidget.js  index.js  portfolio.js
public/kartuliflash/: script.js  style.css
public/kopfnicker.de/cgi-bin/: counter.pl?3
public/spacebears/: script.js  style.css
routes/: index.js  kartuliflash.js  portfolio.js  spacebears.js
src/: main.rs
src/routes/: mod.rs  views.rs
static/css/: style.css
static/data/: portfolio.json
static/js/: portfolio.js  spacebears.js
templates/: footer.hbs  header.hbs
templates/views/: index.hbs  kartuliflash.hbs  portfolio.hbs  spacebears.hbs
views/: index.jade  kartuliflash.jade  layout.jade  portfolio.jade  spacebears.jade
